--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,10 @@
     color: white;
     font: bold 14px/1.5 Arial;
 }
+#AndreasRG-Sektion img {
+    width: 69px;
+    height: 69px;
+}
 .Nikoleta {
     background-color: #190101;
     border-radius: 50px;
