--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,7 @@
 #AndreasRG-Sektion img {
     width: 69px;
     height: 69px;
+    border-radius: 30px;
 }
 .Nikoleta {
     background-color: #190101;
