--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,11 @@
 * {
     font-family: Arial;
 }
-
+.Andreas {
+    border: solid 1px black;
+    padding: 10;
+    border-radius: 5px;
+}
 .Nikoleta {
         background-color: #190101;
     border-radius: 50px;
