--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,14 @@
     color: white;
     font: bold 14px/1.5 Arial;
 }
-
+#AndreasRG-Sektion img {
+    width: 69px;
+    height: 69px;
+    border-radius: 30px;
+}
+#AndreasRG-Sektion img:hover {
+    opacity: 0.8;
+    transition: opacity 0.2s;
 * {
     font-family: Arial;
 }
@@ -20,9 +27,6 @@
     border: solid 1px black;
     padding: 10;
     border-radius: 5px;
-}
-#AndreasRG-Sektion img:hover {
-    opacity: 0.8;
 }
 .Nikoleta {
         background-color: #190101;
