--- a/styles.css
+++ b/styles.css
@@ -23,5 +23,6 @@
     color: white;
     padding: 20px;
     box-sizing: border-box;
-    margin-top: 120px;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
